Fixed CSS issue where Blog_Excerpt banner was being cut off

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -34,7 +34,7 @@ div.blog-excerpt{
 	background:url('../images/HoldingWoodStormCo\ copy.jpg') no-repeat green;
 	background-size: cover;
     background-repeat: no-repeat;
-    background-position: bottom;
+    background-position: center;
 }
 blockquote{
 	background-color: white;
